objects/MTRNS__MapInstructions__mdt.object
<CustomObject>
    <description>This object contains compiled mapping instructions for the MTRNS Mapping and Transformation package.</description>
    <fields>
        <fullName>MTRNS__Category__c</fullName>
        <description>The mapping instruction category.</description>
        <label>Instruction Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__CompiledInstructions__c</fullName>
        <description>JSON Serialized representation of the Compiled array of MTRNS MapInstruction_v1</description>
        <label>Compiled Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTRNS__Context__c</fullName>
        <description>The mapping instruction context (Request, Response, etc)</description>
        <label>Instruction Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__Differentiator__c</fullName>
        <description>The mapping instruction differentiator.</description>
        <label>Instruction Differentiator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__InstructionType__c</fullName>
        <description>The mapping instruction type (X2X-FAST, O2X-MAP, NCR, NCR-NFUSE, etc)</description>
        <label>Instruction Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the mapping instruction item will be used. When false, the instruction will be ignored.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTRNS__PackageName__c</fullName>
        <description>Package name associated to this mapping instruction.</description>
        <label>Instruction Package Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__ProcessingOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The processing order for this mapping instruction.</description>
        <label>Instruction Processing Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTRNS__SelectorKey__c</fullName>
        <description>The mapping instruction selector key. This key is used to aggregate the mapping instructions.</description>
        <label>Instruction Selector Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTRNS__SubContext__c</fullName>
        <description>The mapping instruction sub-context (Consumer, Business, etc)</description>
        <label>Instruction Sub-Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mapping Instructions</label>
    <pluralLabel>Mapping Instructions</pluralLabel>
</CustomObject>